# grapl

./: .dockerignore  .flake8  .gitattributes  .gitignore  .gitpod.yml  .grapl-root-marker  .protoc-version  .python-version  .rustfmt.toml  .swp  .typescript-version  :q!  BUILD  BUILDING.md  CHORES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.dev  Dockerfile.pulumi  EDITOR_SETUP.md  Graph Provision.ipynb  Grapl Provision.ipynb  LICENSE  LOCAL_UI_WORKFLOW.md  Makefile  README.md  buf.yaml  codecov.yml  dobi.yaml  docker-bake.hcl  docker-compose-artifacts.yml  docker-compose-integration-tests.yml  docker-compose.Makefile.yml  docker-compose.build.yml  docker-compose.check.yml  docker-compose.format.yml  docker-compose.formatter.yml  docker-compose.grapl-ux-router.test.yaml  docker-compose.integration-tests.yml  (+35 more)
analyzer-dispatcher/: Cargo.toml  Dockerfile  build.sh  run_local.sh
analyzer-dispatcher/graph-descriptions/: Cargo.toml
analyzer-dispatcher/graph-descriptions/proto/: graph_description_pb2.py
analyzer-dispatcher/graph-descriptions/src/: lib.rs
analyzer-dispatcher/src/: config.rs  main.rs
derive-dynamic-node/: Cargo.toml
derive-dynamic-node/examples/: ex.rs
derive-dynamic-node/src/: lib.rs
engagement-creation-service/: Cargo.toml  build.py  build.sh
engagement-creation-service/engagements/: Cargo.toml
engagement-creation-service/engagements/src/: lib.rs
engagement-creation-service/graph-descriptions/src/: lib.rs
engagement-creation-service/incident-graph/: Cargo.toml
engagement-creation-service/incident-graph/src/: lib.rs
engagement-creation-service/sqs-microservice/: Cargo.toml
engagement-creation-service/sqs-microservice/src/: lib.rs
engagement-creation-service/src/: main.rs
generic-subgraph-generator/: Cargo.toml  build.sh
generic-subgraph-generator/graph-generator-lib/: Cargo.toml
generic-subgraph-generator/src/: main.rs
graph-descriptions/: Cargo.toml  build.rs
graph-descriptions/proto/: graph_description.proto  graph_description_pb2.py  graph_description_pb2.pyi
graph-descriptions/src/: asset.rs  dynamic_node.rs  error.rs  file.rs  graph.rs  ip_address.rs  ip_connection.rs  ip_port.rs  lib.rs  network_connection.rs  node.rs  process.rs  process_inbound_connection.rs  process_outbound_connection.rs
graph-generator-lib/: Cargo.toml
graph-generator-lib/graph-descriptions/: Cargo.toml
graph-generator-lib/graph-descriptions/proto/: graph_description.proto
graph-generator-lib/graph-descriptions/src/: lib.rs
graph-generator-lib/src/: config.rs  lib.rs
graph-merger/: Cargo.toml  Dockerfile  build.sh
graph-merger/graph-descriptions/: build.rs
graph-merger/graph-descriptions/proto/: graph_description.proto
graph-merger/graph-descriptions/src/: lib.rs
graph-merger/src/: main.rs
graph-service/: Cargo.toml  build.rs  build.sh
graph-service/benches/: my_benchmark.rs
graph-service/graph-descriptions/src/: lib.rs
graph-service/proto/: subgraph_merge_event.proto
graph-service/sqs-microservice/src/: lib.rs
graph-service/src/: lib.rs
graph-service/src/graph_merger/: server.rs
grapl-config/: Cargo.toml
grapl-config/src/: lib.rs
incident-graph/: Cargo.toml
incident-graph/src/: lib.rs
node-identifier/: Cargo.lock.bk  Cargo.toml  Cargo.toml.bk  Dockerfile  build.sh  reset_db.py
node-identifier/graph-descriptions/: build.rs
node-identifier/graph-descriptions/src/: lib.rs
node-identifier/sqs-microservice/src/: lib.rs
node-identifier/src/: assetdb.rs  cache.rs  dynamic_sessiondb.rs  file_history.rs  history.rs  ip_asset_history.rs  lib.rs  process_history.rs  retry_cache.rs  session.rs  session_history.rs  sessiondb.rs  sessions.rs
node-identity-mapper/: Cargo.toml  build.rs  build.sh
node-identity-mapper/graph-descriptions/proto/: graph_description.proto
node-identity-mapper/graph-descriptions/src/: lib.rs
node-identity-mapper/graph-generator-lib/: Cargo.toml
node-identity-mapper/graph-generator-lib/graph-descriptions/: Cargo.toml  build.rs
node-identity-mapper/proto/: ip_asset_mapping.proto  ip_asset_mapping_pb2.py
node-identity-mapper/sqs-microservice/src/: lib.rs
node-identity-mapper/src/: hostname_asset_mapper.rs  ip_asset_mapper.rs  main.rs
sqs-lambda/: Cargo.toml
sqs-lambda/src/: lib.rs
sqs-microservice/: Cargo.toml
sqs-microservice/src/: lib.rs
src/python/grapl-template-generator/: mypy.ini  pyproject.toml  requirements.txt
src/python/graplctl/: Dockerfile  README.rst  graplctl.Dockerfile  pyproject.toml
src/rust/: .dockerignore  .gitignore  BUILD  Cargo.toml  Dockerfile  Dockerfile.Makefile  Makefile  build-env.Dockerfile  build-int-tests.sh  dist.Dockerfile  docker-bake.hcl  init-sql.sh  init.sql  integration-tests.Dockerfile  rust-toolchain  rust-toolchain.toml
src/rust/.cargo/: audit.toml  config.toml
src/rust/.config/: hakari.toml
src/rust/analyzer-dispatcher/: Cargo.toml  Dockerfile
src/rust/async-cache/: Cargo.toml
src/rust/client-executor/: Cargo.toml
src/rust/consul-client/: Cargo.toml
src/rust/consul-connect/: Cargo.toml
src/rust/db-schema-manager/: Cargo.toml
src/rust/derive-dynamic-node/: Cargo.toml
src/rust/dgraph-metrics-collector/: Cargo.toml
src/rust/e2e-tests/: Cargo.toml
src/rust/endpoint-plugin/: Cargo.toml
src/rust/engagement-creator/: Cargo.toml
src/rust/event-source/: Cargo.toml  sqlx-data.json
src/rust/generator-dispatcher/: Cargo.toml  README.md
src/rust/generator-executor/: Cargo.toml
src/rust/generic-subgraph-generator/: Cargo.toml  Dockerfile
src/rust/graph-descriptions/: .bumpversion.cfg  Cargo.toml  Dockerfile  build.rs  requirements.txt  setup.py  test_graph_descriptions.py  tests.Dockerfile
src/rust/graph-generator-lib/: Cargo.toml
src/rust/graph-merger/: Cargo.toml  Dockerfile
sysmon-subgraph-generator/: Cargo.toml  Dockerfile  build  build.sh
sysmon-subgraph-generator/graph-descriptions/: build.rs
sysmon-subgraph-generator/graph-generator-lib/: Cargo.toml
sysmon-subgraph-generator/sqs-microservice/: Cargo.toml
sysmon-subgraph-generator/src/: config.rs  main.rs
(+3764 files in other folders)
