[package]
name = "analyzer-dispatcher"
version = "0.1.0"
authors = ["Insanitybit <insanitybit@gmail.com>"]
edition = "2018"

[dependencies]
graph-descriptions = { path = "./graph-descriptions/" }

aws_lambda_events = "0.2.1"
base64 = "0.10.1"
base16 = "0.1.1"
dgraph-rs = "0.1.2"
failure = "0.1.5"
futures = "0.1.25"
grpc = "0.6.1"
log = "0.4.6"
openssl-probe = "0.1.2"
prost = "0.4.0"
rusoto_core = "0.32.0"
rusoto_s3 = "0.32.0"
rusoto_sns = "0.32.0"
rusoto_sqs = "0.32.0"
serde = "1.0.85"
serde_derive = "1.0.85"
serde_json = "1.0.37"
sha2 = "0.8.0"
simple_logger = "1.0.1"
sqs-lambda = "0.1.8"
stopwatch = "0.0.7"
lambda_runtime = "0.1.0"
zstd = "0.4.22+zstd.1.3.8"
