[package]
name = "derive-dynamic-node"
version = "0.1.3"
authors = ["Insanitybit <insanitybit@gmail.com>"]
edition = "2018"

description = "Derive macro work creating Grapl plugins"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "0.15.39"
quote = "0.6.13"
proc-macro2 = "0.4.30"

grapl-graph-descriptions = "0.1.*"
serde_derive = "1.0.97"
serde = "1.0.97"
serde_json = "1.0.40"
log = "0.4.7"


[dependencies.uuid]
version = "0.7.4"
features = ["v4"]
