[package]
name = "grapl-graph-descriptions"
version = "0.2.6"
authors = ["Insanitybit <insanitybit@gmail.com>"]
description = "A library for interacting with Grapl graphs"
license = "MIT"


[dependencies]

futures = "0.1"
thiserror = "1.0.9"
bytes = "0.4"
prost = "0.4"
prost-derive = "0.4"

typed-builder= "0.1.1"

derive_more = "0.10.*"
custom_derive = "0.1.7"

serde = "1.0.66"
serde_json = "1.0.20"
serde_derive = "1.0.66"
derive_builder = "0.7.0"
log = "0.4.6"
base64 = "0.11.0"


[dependencies.uuid]
version = "0.8.1"
features = ["v4"]



[build-dependencies]
prost-build = "0.4.0"
