[package]
name = "graph-generator-lib"
version = "0.1.6"
authors = ["Insanitybit <insanitybit@gmail.com>"]
description = "Helper library for implementing Grapl Graph Generators"
license = "Apache-2.0"
edition = "2018"

[dependencies]

graph-descriptions = {package="grapl-graph-descriptions" , version="0.2.*"}
#graph-descriptions = {package="grapl-graph-descriptions", path="../graph-descriptions" , version="*"}

failure = "0.1.2"

sha2 = "0.7.1"

rusoto_s3 = {version="0.43.0-beta.1", default_features = false, features=["rustls"]}
rusoto_core = {version="0.43.0-beta.1", default_features = false, features=["rustls"]}
rusoto_sqs = {version="0.43.0-beta.1", default_features = false, features=["rustls"]}
rusoto_credential = "0.43.0"

lambda_runtime = "0.2.*"
futures = "0.3"
base64 = "0.9.2"
prost = "0.4.0"
serde_json = "1.0.24"
log = "0.4.3"
zstd = "0.5"
tokio-compat = "0.1.2"
tokio = { version = "0.2.4", features = ["sync", "rt-core", "macros", "time", "rt-threaded"] }
aws_lambda_events = "0.3.0"
sqs-lambda = "0.20.7"
chrono = "0.4.11"
