[package]
name = "graph-merger"
version = "0.1.0"
authors = ["Insanitybit <insanitybit@gmail.com>"]
edition = "2018"

[dependencies]
graph-descriptions = {package="grapl-graph-descriptions" , version="*"}
#graph-descriptions = {path="../graph-descriptions", package="grapl-graph-descriptions" , version="*"}
failure = "0.1.3"
serde = "1.0.80"
serde_json = "1.0.33"
serde_derive = "1.0.80"
log = "0.4.6"

dgraph-rs = "0.2.*"
grpc = "0.6.1"
sqs-lambda = "0.20.2"
#sqs-lambda = {path="../../../workspace/sqs-lambda/" , version="*"}

rusoto_s3 = { version="0.43.0-beta.1", default_features = false, features=["rustls"] }
rusoto_core = { version="0.43.0-beta.1", default_features = false, features=["rustls"] }
rusoto_sqs = { version="0.43.0-beta.1", default_features = false, features=["rustls"] }
rusoto_sns = { version="0.43.0-beta.1", default_features = false, features=["rustls"] }

#futures = "0.1.25"
lambda_runtime = "0.2.*"
aws_lambda_events = "0.2.0"

simple_logger = "1.0.1"
stopwatch = "0.0.7"
sha2 = "0.8.0"

zstd = "0.5.1"
base16 = "0.1.1"
prost = "0.4.0"
base64 = "0.10.1"
rand = "0.6.5"
itertools = "0.8.0"

futures = "0.3.1"
async-trait = "0.1.22"
uuid = "0.8.1"
tokio-compat = "0.1.2"
tokio = { version = "0.2.4", features = ["sync", "rt-core", "macros", "time", "rt-threaded"] }
chrono = "0.4.11"
rusoto_credential = "0.43.0"
