[package]
name = "graph-merger"
version = "0.1.0"
authors = ["InsanityBit"]



[[bin]]
name = "graph-merger"
path = "src/graph_merger/server.rs"

[dependencies]
aws_lambda = { git = "https://github.com/srijs/rust-aws-lambda" }

futures-await = "0.1.0"
bytes = "0.4"
env_logger = { version = "0.5", default-features = false }
log = "0.4"
http = "0.1"
prost = "0.4"
prost-derive = "0.4"
tokio-core = "0.1"
typed-builder="*"
rusoto_sns = "0.32.*"
rusoto_sqs = "0.32.0"
rusoto_core = "0.32.*"

sha3="*"

maplit="*"
hash_hasher= "1.0.0"

sqs-microservice = { path = "./sqs-microservice/" }
graph-descriptions = { path = "./graph-descriptions/" }

dgraph_client ="*"
serde = "1.0.66"
serde_json = "1.0.20"
newtype_derive = "0.1.6"
base64 = "0.9.2"
quickcheck = "0.6.2"
rayon = "1.0.1"
failure = "0.1.1"
stopwatch = "0.0.7"
sha2 = "0.7.1"
rusoto_s3 = "0.32.*"
futures = "0.1.24"

[dependencies.uuid]
version = "*"
features = ["v4"]

[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc" }

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "my_benchmark"
harness = false

#[dev-dependencies]
#mutagen = "0.1.1"
#mutagen-plugin = "0.1.1"

[patch.crates-io]
http = { git = "http://github.com/hyperium/http", rev = "5f362a32278891672f428d570d46387fe6896a5d" }
