[package]
name = "grapl-config"
version = "0.1.0"
authors = ["Insanitybit <insanitybit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.*"
sqs-lambda = "0.20.1"
rusoto_core = {version="0.43.0", default_features = false, features=["rustls"]}