[package]
name = "incident-graph"
version = "0.1.0"
authors = ["Insanitybit <insanitybit@gmail.com>"]

[dependencies]
base64 = "*"
futures = "0.1"
bytes = "0.4"
http = "0.1"
prost = "0.4"
prost-derive = "0.4"
tokio-core = "0.1"
tower-service = { git = "https://github.com/tower-rs/tower" }
tower-h2 = { git = "https://github.com/tower-rs/tower-h2" }
tower-http = { git = "https://github.com/tower-rs/tower-http" }
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc" }

typed-builder= "0.1.0"
sha3="*"
log = "*"

derive_more = "0.10.*"
newtype_derive = "*"
maplit="*"
hash_hasher="*"
custom_derive = "0.1.7"
serde = "1.0.66"
serde_json = "1.0.20"
serde_derive = "1.0.66"
dgraph_client = "0.1.0"
failure = "0.1.2"
sha2 = "0.8.0"
sqs-lambda = "0.1.4"


[dependencies.uuid]
version = "*"
features = ["v4"]



[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc" }


