[package]
name = "node-identifier"
version = "0.1.0"
authors = ["Insanitybit <insanitybit@gmail.com>"]

[[bin]]
name = "node-identifier"
path = "src/bin/node-identifier.rs"


[[bin]]
name = "node-identifier-retry-handler"
path = "src/bin/node-identifier-retry-handler.rs"


[dependencies]
bytes = "0.4"
failure = "*"
graph-descriptions = {path = "./graph-descriptions"}
prost = "0.4.0"
prost-derive = "0.4"
prost-types = "*"
tokio-core = "0.1"
#postgres = "0.15.2"
base64 = "0.9.2"

rusoto_s3 = "0.32.0"
rusoto_core = "0.32.0"
rusoto_sqs = "0.32.0"
sha256 = "0.1.0"
sha2 = "0.7.1"
log = "*"
base58 = "0.1.0"
stopwatch = "0.0.7"
lru_time_cache = "0.8.0"
zstd = "0.4.22+zstd.1.3.8"
futures = "0.1.25"
sqs-lambda = "0.1.4"
lambda_runtime = "0.1.0"
aws_lambda_events = "0.2.0"
openssl-probe = "0.1.2"
simple_logger = "1.0.1"
serde_json = "1.0.39"
serde_derive = "1.0.89"
serde = "1.0.89"

[dependencies.uuid]
version = "0.6.*"
features = ["v4"]

[dependencies.mysql]
version = "*"
features = ["ssl"]
