[package]
name = "node-identifier"
version = "0.1.0"
authors = ["Insanitybit <insanitybit@gmail.com>"]
edition = "2018"

[[bin]]
name = "node-identifier"
path = "src/bin/node-identifier.rs"


[[bin]]
name = "node-identifier-retry-handler"
path = "src/bin/node-identifier-retry-handler.rs"


[dependencies]
bytes = "0.4"
failure = "*"
graph-descriptions = {package="grapl-graph-descriptions", version="*"}
grapl-config = {path = "../grapl-config"}
prost = "0.4.0"
prost-derive = "0.4"
prost-types = "*"

base64 = "0.9.2"

rusoto_s3 = {version="0.43.0-beta.1", default_features = false, features=["rustls"]}
rusoto_core = {version="0.43.0-beta.1", default_features = false, features=["rustls"]}
rusoto_sqs = {version="0.43.0-beta.1", default_features = false, features=["rustls"]}
rusoto_dynamodb = {version="0.43.0-beta.1", default_features = false, features=["rustls"]}
serde_dynamodb = {version="0.5.0-beta.1", default_features = false, features=["rustls"]}

lambda_runtime = "0.2.*"

sha256 = "0.1.0"
sha2 = "0.7.1"
log = "*"
base58 = "0.1.0"
stopwatch = "0.0.7"

zstd = "0.5.*"
futures = "0.3.*"
sqs-lambda = "0.20.*"

aws_lambda_events = "0.2.0"

simple_logger = "1.6.*"
serde_json = "1.0.39"
serde_derive = "1.0.89"
serde = "1.0.89"

quickcheck = "0.8.2"
quickcheck_macros = "0.8.0"
hex = "0.4.0"
async-trait = "0.1.21"
tokio-compat = "0.1.2"
tokio = { version = "0.2.13", features = ["sync", "rt-core", "macros", "time", "rt-threaded"] }
hmap = "0.1.0"
tracing = "0.1.13"
chrono = "0.4.11"
rusoto_credential = "0.43.0"

[dependencies.uuid]
version = "0.6.*"
features = ["v4"]

