[package]
name = "node-identity-mapper"
version = "0.1.0"
authors = ["Insanitybit <insanitybit@gmail.com>"]

[dependencies]
bytes = "0.4"
failure = "*"
futures-await = "0.1.1"
sqs-microservice = {path = "./sqs-microservice"}
graph-descriptions = {path = "./graph-descriptions"}
prost = "0.4.0"
prost-derive = "0.4"
prost-types = "*"
tokio-core = "0.1"
postgres = "0.15.2"
base64 = "0.9.2"
rusoto_core = "0.32.0"
rusoto_s3 = "0.32.0"
sha256 = "0.1.0"
sha2 = "0.7.1"
log = "0.4.4"


[dependencies.uuid]
version = "*"
features = ["v4"]


[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc" }

