[package]
name = "node-identity-mapper"
version = "0.1.0"
authors = ["Insanitybit <insanitybit@gmail.com>"]

[dependencies]
bytes = "0.4"
failure = "*"
graph-descriptions = {path = "./graph-descriptions"}
prost = "0.4.0"
prost-derive = "0.4"
prost-types = "*"
tokio-core = "0.1"
postgres = "0.15.2"
base64 = "0.9.2"

rusoto_core = {version = "0.40.0", default_features = false, features=["rustls"]}
rusoto_s3 = {version = "0.40.0", default_features = false, features=["rustls"]}

sha256 = "0.1.0"
sha2 = "0.7.1"
log = "0.4.4"
mysql = "14.1.0"
serde = "1.0.80"
serde_json = "1.0.32"
serde_derive = "1.0.80"
futures = "0.1.25"
sqs-lambda = "0.6.*"
openssl-probe = "0.1.2"
stopwatch = "0.0.7"
lambda_runtime = "0.1.0"
aws_lambda_events = "0.2.1"
simple_logger = "1.0.1"


[dependencies.uuid]
version = "*"
features = ["v4"]

