[package]
name = "sysmon-subgraph-generator"
version = "0.1.0"
authors = ["Insanitybit <insanitybit@gmail.com>"]

[dependencies]
graph-generator-lib = { path = "./graph-generator-lib/" }
graph-descriptions = { path = "./graph-descriptions/" }
sqs-lambda = "0.6.*"
#sqs-lambda = {path = "./sqs-lambda/"}
serde_json = "*"
serde = "1.0.71"
serde_derive = "1.0.71"
failure = "0.1.2"
prost = "0.4.0"
log = "0.4.3"
base16 = "0.1.1"
regex = "1.1.0"
lazy_static = "1.2.0"
brotli = "3.1.0"
sysmon = "0.2"
chrono = "0.4.6"
no-panic = "0.1.6"
rayon = "1.0.3"
stopwatch = "0.0.7"


rusoto_core = {version = "0.40.0", default_features = false, features=["rustls"]}
rusoto_s3 = {version = "0.40.0", default_features = false, features=["rustls"]}
rusoto_sqs = {version = "0.40.0", default_features = false, features=["rustls"]}
#rusoto_mock = "0.30.0"


futures = "0.1.25"
aws_lambda_events = "0.2.0"
simple_logger = "1.0.1"
lambda_runtime = "0.1.0"


[dependencies.uuid]
version = "*"
features = ["v4"]
