[package]
name = "graph-descriptions"
version = "0.1.0"
authors = ["Insanitybit <insanitybit@gmail.com>"]


[dependencies]
base64 = "*"
futures = "0.1"
bytes = "0.4"
prost = "0.4"
prost-derive = "0.4"

typed-builder= "0.1.0"
sha3="*"

derive_more = "0.10.*"
newtype_derive = "*"
maplit="*"
hash_hasher="*"
custom_derive = "0.1.7"
serde = "1.0.66"
serde_json = "1.0.20"
serde_derive = "1.0.66"


[dependencies.uuid]
version = "*"
features = ["v4"]



[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc" }
