[workspace]
members = [
  "./client-executor",
  "./consul-connect",
  "./derive-dynamic-node",
  "./e2e-tests",
  "./endpoint-plugin",
  "./event-source",
  "./generator-dispatcher",
  "./generators/osquery-generator",
  "./generators/sysmon-generator",
  "./graph-merger",
  "./grapl-config",
  "./grapl-graphql-codegen",
  "./grapl-tracing",
  "./grapl-utils",
  "./grapl-web-ui",
  "./kafka",
  "./kafka-retry/",
  "./node-identifier",
  "./nomad-client-gen",
  "./organization-management",
  "./pipeline-ingress",
  "./plugin-bootstrap",
  "./plugin-execution-sidecar",
  "./plugin-registry",
  "./plugin-sdk/generator-sdk/",
  "./plugin-work-queue",
  "./rust-proto",
  "./graph-schema-manager",
  "./scylla-provisioner",
  "./sysmon-parser",
  "./uid-allocator",
]

[profile.dev]
opt-level = 1

[profile.dev-local-grapl]
inherits = "dev"
# Remove this if you're trying to debug with gdb.
# Results in a ~20x binary size reduction, for example
# sysmon-generator: 279M -> 16M
strip = "debuginfo"
