[package]
name = "graph-generator-lib"
version = "0.1.0"
authors = ["Insanitybit <insanitybit@gmail.com>"]

[dependencies]

graph-descriptions = {package="grapl-graph-descriptions", path="../graph-descriptions", version="*"}

failure = "0.1.2"

sha2 = "0.7.1"
rusoto_core = {version = "0.40.0", default_features = false, features=["rustls"]}
rusoto_s3 = {version = "0.40.0", default_features = false, features=["rustls"]}
rusoto_sqs = {version = "0.40.0", default_features = false, features=["rustls"]}

futures = "0.1.23"
base64 = "0.9.2"
prost = "0.4.0"
serde_json = "1.0.24"
log = "0.4.3"
base16 = "0.1.1"
zstd = "0.4.21+zstd.1.3.7"
