[tool.poetry]
name = "grapl_template_generator"
version = "0.1.0"
description = ""
authors = ["colin <colin@graplsecurity.com>"]

[tool.poetry.scripts]
generate = "grapl_template_generator:main"

[tool.poetry.dependencies]
python = "^3.9"
typed = "^0.6"
pydantic = "^1.8.1"
toml = "^0.10.2"

grapl-common = { path = "../grapl-common/", develop = true }

[tool.poetry.dev-dependencies]
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
