[tool.poetry]
name = "graplctl"
version = "0.1.0"
description = "CLI tool to operate Grapl"
authors = ["jgrillo <jgrillo@graplsecurity.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
boto3 = "^1.16.35"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.790"
boto3-stubs = {extras = ["ec2", "s3", "ssm", "cloudwatch", "sns", "sqs", "route53"], version = "^1.16.52"}

[tool.poetry.scripts]
graplctl = "graplctl:cli.main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
