[package]
name = "analyzer-dispatcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait = "0.1"
async-cache = { path = "../async-cache" }
clap = { version = "3.0", default_features = false, features = [
  "std",
  "env",
  "derive"
] }
futures = "0.3"
grapl-tracing = { path = "../grapl-tracing" }
kafka = { path = "../kafka", version = "*" }
rust-proto = { path = "../rust-proto" }
thiserror = { workspace = true }
tokio = { version = "1.17", features = ["macros", "rt", "rt-multi-thread"] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
async-trait = "0.1"
bytes = "1.1"
eyre = "0.6"
e2e-tests = { path = "../e2e-tests" }
plugin-work-queue = { path = "../plugin-work-queue", features = ["test-utils"] }
test-context = "0.1"

[features]
integration_tests = []
