[package]
name = "client-executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
pin-project = "1.0.11"
recloser = "1.0.0"
tokio = { version = "1.20.0", features = ["full"] }
tokio-retry = "0.3.0"
thiserror = "1.0.31"
tracing = "0.1.35"
