[package]
name = "client-executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
pin-project = "1.0.11"
recloser = "1.0.0"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-retry = "0.3.0"
tracing = { workspace = true }

[dev-dependencies]
env_logger = "0.9.0"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt"
] }
