[package]
name = "consul-client"
version = "0.0.1"
authors = ["Max Wittek <wimax@graplsecurity.com>"]
edition = "2021"

[dependencies]
clap = { workspace = true }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
