[package]
name = "consul-connect"
version = "1.0.0"
authors = ["Max Wittek <wimax@graplsecurity.com>"]
edition = "2021"

[dependencies]
clap = { version = "3.0", default_features = false, features = [
  "std",
  "env",
  "derive"
] }
thiserror = { workspace = true }
tokio = { version = "1.17", features = ["full"] }
tracing = { workspace = true }
trust-dns-resolver = "0.20"

[features]
client = []
