[package]
name = "consul-connect"
version = "1.0.0"
authors = ["Max Wittek <wimax@graplsecurity.com>"]
edition = "2021"

[dependencies]
clap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
trust-dns-resolver = "0.20"

[features]
client = []
