[package]
name = "derive-dynamic-node"
version = "1.0.1"
authors = ["Insanitybit <insanitybit@gmail.com>"]
edition = "2021"
description = "Derive macro work creating Grapl plugins"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "1.0.82"
quote = "1.0.10"
proc-macro2 = "1.0.32"
grapl-workspace-hack = { version = "0.1", path = "../grapl-workspace-hack" }

[dev-dependencies]
rust-proto = { path = "../rust-proto", version = "*" }
serde = "1.0.130"
serde_json = "1.0.72"
serde_derive = "1.0.130"
log = "0.4.14"
uuid = { version = "0.8", features = ["v4"] }
