[package]
name = "derive-dynamic-node"
version = "1.0.1"
authors = ["Insanitybit <insanitybit@gmail.com>"]
edition = "2021"
description = "Derive macro work creating Grapl plugins"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
rust-proto = { path = "../rust-proto", version = "*" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
uuid = { version = "1.0", features = ["v4"] }
