[package]
name = "derive-dynamic-node"
version = "1.0.1"
authors = ["Insanitybit <insanitybit@gmail.com>"]
edition = "2021"
description = "Derive macro work creating Grapl plugins"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[dev-dependencies]
log = "0.4"
rust-proto = { path = "../rust-proto", version = "*" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { workspace = true }
